# h33-verifier

./: BOUNDARY.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  THREAT_MODEL.md
src/: attest.rs  bundle.rs  canonical.rs  identity.rs  lib.rs  main.rs  mode2.rs  pq.rs  pubkeys.rs  report.rs  signed_report.rs
tests/: computation_type_registry.rs  integration_mode2_cli.rs  integration_verify.rs
tests/fixtures/: sample-receipt-generic.json
tests/fixtures/real/: production-anchor-2026-05-26.input  production-anchor-2026-05-26.json
