[package]
name = "h33-verify"
version = "0.2.0"
edition = "2021"
description = "Independent offline verifier for H33-74 substrate receipts. v0.2 adds verifier-signed verification reports (Ed25519). Mode 1 deterministic only; Mode 2 PQ-signature verification lands in v0.3."
authors = ["H33 / community"]
license = "Apache-2.0"
repository = "https://github.com/H33ai/h33-verifier"
readme = "README.md"
rust-version = "1.75"

[[bin]]
name = "h33-verify"
path = "src/main.rs"

[lib]
name = "h33_verify"
path = "src/lib.rs"

[dependencies]
sha3 = "0.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
# none — fixtures are .json files, asserts are stdlib

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
